# playground

./: .gitignore  .gitmodules  README.md  fib.py  fib1.py  fib2.py
alpine/: README.md
ansible/: ansible.cfg  hosts  hosts.yml  mysecret.txt  play_alpine.yml  play_alpine_base_setup.yml  play_info.yml  play_nginx.yml  play_tags.yml  play_upgrade.yml  task_include.yml
ansible/group_vars/: lenovo
ansible/host_vars/: 192.168.1.110
bash/: README.md  bim.sh  download.sh  errout.sh  misc.sh  mon.sh  trap.sh  vcs_cleanup_revert_update.sh
centos5/: README.md
cmake/: CMakeLists.txt
cmake/_/: CMakeCache.txt  (+2 more)
cmake/a/aa/: CMakeCache.txt  CMakeLists.txt  Makefile  aaa  cmake_install.cmake
cmp_ide/: CMakeLists.txt
cpp/: array.cpp  bitwise.cpp  covariant-return-types.cpp  function_pointer.cpp  main.cpp  namespaces.cpp  overflow.cpp  pointer.cpp  standard.cpp  std_function.cpp  switch.cpp  syntax.cpp  timestamp.cpp  types.cpp  virtual-assignment.cpp
cpp/boost/: CMakeLists.txt  asio.cpp  echo-client-server.cpp  httpd.cpp  makefile  program_options.cpp
db/: README.md
groovy/: a.groovy
k8s/: nginx.yaml
posix/: detect_disks  detect_disks.c  fork_exec_read.c
py/: asyncio-aiohttp.py  fileiter.py  http_proxy.py  md5.py  mtime.py  syntax.py  test.db
qa/: client  client.cpp  server  server.cpp  tests.py
qt/: qt-stylesheet.css
rpm/: README.md
salt/: Dockerfile  README.md
snippets/: 1.Jenkinsfile
tcpdump/: tcp_client  tcp_client.c  tcp_server  tcp_server.c  udp_client  udp_client.c  udp_server  udp_server.c
tcpip/: c  l  s  t
ulimit_ram/: main.c
(+252 files in other folders)
